fixed spell-attributes spacing and styling, finalized layout

--- a/src/pages/spellPage/SpellPage.css
+++ b/src/pages/spellPage/SpellPage.css
@@ -2,11 +2,13 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    height: 100%;
-    margin: 24px 0;
-    width: 60%;
+    height: 600px;
+    max-width: 800px;
     background-color: var(--parchment);
     color: var(--ink);
+    padding: 32px;
+    margin: 24px 0 60px;
+    border-radius: 30px;
 }
 
 .spell-attributes-container {
@@ -15,7 +17,9 @@
     justify-content: space-between;
     align-items: center;
     text-align: start;
-    align-self: center;
+    padding: 24px 0;
+    flex-wrap: wrap;
+    row-gap: 12px
 }
 
 .spell-name {
@@ -23,5 +27,10 @@
 }
 .spell-attribute {
     text-align: start;
-    width: 25%;
+    min-width: 25%;
+    font-size: 18px;
+}
+
+.spell-description {
+    font-size: 24px;
 }
